--- a/style.css
+++ b/style.css
@@ -29,14 +29,15 @@ p {
 
 /* Kategori */
 
-.wrap-kategori .card-k {
+.wrap-kategori .card-p {
     width: 100%;
     height: 280px;
     border-radius: 10px;
+    margin-top: 1em;
     box-shadow: 0 0 17px 3px rgba(160, 121, 4, 0.2);
 }
 
-.wrap-kategori .card-k .img {
+.wrap-kategori .card-p .img {
     width: 100%;
     background-color: aqua;
     height: 180px;
@@ -45,7 +46,7 @@ p {
     margin-top: 1.5em;
 }
 
-.wrap-kategori .card-k .img .shape-shadow {
+.wrap-kategori .card-p .img .shape-shadow {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to bottom, rgba(160, 121, 4, 0.4), rgba(255, 193, 7, 0));
@@ -55,15 +56,63 @@ p {
     border-radius: 10px 10px 0 0;
 }
 
-.wrap-kategori .card-k .img img {
+.wrap-kategori .card-p .img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
 }
 
-.wrap-kategori .card-k .detail {
+.wrap-kategori .card-p .detail {
     padding: 1.5em 0 0 1em;
+}
+
+.wrap-kategori .card-k {
+    width: 100%;
+    height: 280px;
+    border-radius: 10px;
+    margin-top: 1em;
+    box-shadow: 0 0 17px 3px rgba(160, 121, 4, 0.2);
+    transition: .4s;
+    cursor: pointer;
+}
+
+.wrap-kategori .card-k:hover {
+    transform: scale(1.07);
+}
+
+
+.wrap-kategori .card-k .img {
+    width: 100%;
+    background-color: aqua;
+    height: 100%;
+    border-radius: 10px;
+    position: relative;
+    margin-top: 1.5em;
+    color: #ffffff;
+}
+
+.wrap-kategori .card-k .img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.wrap-kategori .card-k .img .shadow {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(255, 193, 7, 0));
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    border-radius: 10px;
+}
+
+.wrap-kategori .card-k .img h3 {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
 }
 
 /* Galeri */
